# kutaragi

./: .clang-format  .gitignore  CMakeLists.txt  CmakeLists.txt  kutaragid  main.cpp
include/: matrix.h  triangle.h  vec.h
src/: main.cpp
tests/: CMakeLists.txt  test_mat.cpp  test_vec.cpp
